@@ -14,6 +14,8 @@ export(fpTxtGp)
 export(getTicks)
 import(grid)
 import(magrittr)
+importFrom(checkmate,assert_class)
+importFrom(checkmate,assert_vector)
 importFrom(grDevices,colorRampPalette)
 importFrom(graphics,par)
 importFrom(utils,tail)
