@@ -4,7 +4,7 @@
 \alias{prPopulateList}
 \title{Populate a list corresponding to matrix specs}
 \usage{
-prPopulateList(elmnt, no_rows, no_cols)
+prPopulateList(elmnt, no_rows, no_cols, missing_rows, is.summary, summary)
 }
 \arguments{
 \item{elmnt}{The element item/list/matrix. If a list it
@@ -16,6 +16,12 @@ and what is a row.}
 \item{no_rows}{Number of rows}
 
 \item{no_cols}{Number of columns}
+
+\item{missing_rows}{The rows that don't have data}
+
+\item{is.summary}{A vector indicating by \code{TRUE}/\code{FALSE} if
+the value is a summary value which means that it will have a different
+font-style}
 }
 \value{
 \code{list} The function returns a list that has
