@@ -5,6 +5,8 @@ Changes for 1.5.2
 * Changed forestplot function to S3 style (thanks Christian Röver)
 * Fixed bug with alignment for summary elements
 * When any of the inputs is missing for a line the line is skipped (issue #5)
+* Added checkmate for argument validation
+* Added option of just specifying the rows that the CI should be applied to (issue #7)
 
 Changes for 1.5.1
 ------------------
